--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_expandable_fab: ^1.8.1
+  localstorage: ^4.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
